# paul

./: .gitignore  Cargo.toml  Dockerfile  README.md
commands/: agent.json  armor.json  shield.json  weapon.json
src/: main.rs
