[package]
name = "paul"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serenity = { version = "0.12.4", features = ["builder", "interactions_endpoint"] }
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["full"] }
